image d'arrière plan pour aider au placement de l'image - utiliser le lien twitch de la miniature du stream - c'est l'image utilisée dans https://www.twitch.tv/directory/following

--- a/gestion.css
+++ b/gestion.css
@@ -48,6 +48,14 @@ p { padding: 2px; margin:0px; }
 	margin: 0px;
 	background-image: url("damier.png");
 }
+.pimage .back_screen {
+	position:absolute;
+	width: 1920px;
+	height: 1080px;
+	top: 0px;
+	left: 0px;
+	opacity: 0.5;
+}
 
 /* boutons de positions */
 .pos_btn {
