--- a/cjs/module_twitter.css
+++ b/cjs/module_twitter.css
@@ -19,12 +19,12 @@
 	position: absolute;
 	top:8px;
 	right:8px;
-	width: 17px;
-	height: 17px;
+	width: 34px;
+	height: 34px;
 	padding: 0px;
 	border: none;
 	border-radius: 50px;
-	background:transparent;
+	background:white;
 	vertical-align:middle;
 	cursor: pointer;
 }
@@ -33,6 +33,8 @@
 }
 .twitter_fermer img {
 	display: block;
+	width: 30px;
+	height: 30px;
 }
 
 .twitter_impetrant {
@@ -66,9 +68,15 @@
 	color: white;
 }
 
+.twitter_message_zone {
+	background-color: rgba(29,161,242,0.3);
+}
 .twitter_message {
-	width: 500px;
-	height: 3.2em;
+	font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+	border: 2px solid #1da1f2;
+	margin:6px;
+	width: 486px;
+	height: 3.9em;
 }
 .twitter_error {
 	color: red;
