module upload: permet de déposer les images (par drag and drop)

--- a/cjs/module_upload.css
+++ b/cjs/module_upload.css
@@ -8,3 +8,13 @@
 	font-size: 100%;
 	margin-left:<?=$screen_width - 85?>px;
 }
+
+#upload.drop_enter {
+	background: #BFB;
+}
+#upload.drop_drop {
+	background: #BFB;
+}
+#upload.drop_wrong {
+	background: red;
+}
