--- a/cjs/module_screens.css
+++ b/cjs/module_screens.css
@@ -150,8 +150,7 @@
 	background-color: #FFFFB0;
 }
 .screen.modified .changer {
-	color: white;
-	background: #444488;
+	background: #BFB;
 }
 
 /* images */
