ajout d'un compteur du nombre de minutes depuis l'établissement d'une image - ça compte les minutes en synchronant le temps avec le site - on peut modifier les minutes en tapant dedans et en faisant entrée

--- a/cjs/module_screens.css
+++ b/cjs/module_screens.css
@@ -153,6 +153,20 @@
 	background: #BFB;
 }
 
+/* screen_timer */
+.screen .screen_timer {
+	position: absolute;
+	bottom: 8px;
+	right: 8px;
+	font-size: 80%;
+}
+.screen .screen_timer .screen_timer_text {
+	border: none;
+	width: 4em;
+	text-align: right;
+	vertical-align: top;
+}
+
 /* images */
 .screen .image,
 .source .image {
