ajout d'une source: bouton pour insertion ou remplacement le remplacement conserve la valeur du timer

--- a/cjs/module_screens.css
+++ b/cjs/module_screens.css
@@ -269,6 +269,9 @@
 	border: none;
 	background: transparent;
 }
+.source .assign {
+	width: 8em;
+}
 .source .assign option:first-child {
 	color: #888;
 }
