--- a/cjs/module_twitter.css
+++ b/cjs/module_twitter.css
@@ -88,7 +88,7 @@
 	float: right;
 	font-size: 100%;
 	border-radius: 10px;
-	padding: 2px 8px;
+	padding: 4px 8px;
 	margin: 0px 12px 0px 0px;
 	background: white;
 	border-color: green;
@@ -97,4 +97,9 @@
 .twitter_envoyer:hover {
 	color: white;
 	background: black;
+}
+#twitter_window .twitter_envoyer .img_twitter {
+	float: left;
+	width: 20px;
+	height: 20px;
 }
