--- a/cjs/module_scoreboard.css
+++ b/cjs/module_scoreboard.css
@@ -51,10 +51,11 @@
 #scoreboard .scoreboard_list button:hover {
 	border: 2px solid black;
 }
-#scoreboard .down_score:hover { border-color: #BB9105; }
-#scoreboard .up_score:hover { border-color: #0C5B0B; }
-#scoreboard .valider_score:hover { border-color: #117E9C; }
-#scoreboard .effacer_score:hover { border-color: #8C0002; }
+#scoreboard .down_score:hover { border-color: #BB9105!important; }
+#scoreboard .up_score:hover { border-color: #0C5B0B!important; }
+#scoreboard .valider_score:hover { border-color: #117E9C!important; }
+#scoreboard .effacer_score:hover { border-color: #8C0002!important; }
+#scoreboard .active_score:hover { border-color: gold!important; }
 
 #scoreboard .nom {
 	padding: 2px 4px 2px;
