consolidation des styles de certains boutons ("rond" devient "btn_image") passage aux icones inspirées de mario pour les boutons +/- et compagnie ne pas modifier les scores des images si il n'y a pas besoin de les modifier

--- a/cjs/module_screens.css
+++ b/cjs/module_screens.css
@@ -147,9 +147,7 @@
 
 /* screen actif */
 .screen.active {
-	border-width: 5px;
-	padding: 5px 5px 0px;
-	/* box-shadow: 6px 6px 5px #777; */
+	box-shadow: 0px 0px 0px 4px green;
 }
 
 /* position changée mais pas validée */
@@ -178,11 +176,11 @@
 	background: transparent;
 }
 .screen .screen_timer .screen_timer_btn {
-	border: none;
-	padding: 0px;
-	width: 16px;
-	height: 16px;
-	background: transparent;
+	border-radius: 8px;
+}
+.screen .screen_timer_btn:hover {
+	border-color: gold!important;
+	background: orange;
 }
 .screen.active .screen_timer {
 	background: yellow;
