--- a/cjs/gestion.css
+++ b/cjs/gestion.css
@@ -108,6 +108,24 @@ h3 {
 	color: #BBB !important;
 }
 
+button.btn_image {
+	width:16px;
+	height:16px;
+	padding: 0px;
+	vertical-align:bottom;
+	background:transparent;
+	border-radius: 6px;
+	border: 2px solid transparent;
+	box-sizing: content-box;
+	position: relative;
+	cursor: pointer;
+}
+button.btn_image img {
+	position: absolute;
+	top: 0px;
+	left: 0px;
+}
+
 /* boutons on/off communs aux modules */
 .btn_switch {
 	position: absolute;
