--- a/cjs/module_scoreboard.css
+++ b/cjs/module_scoreboard.css
@@ -36,26 +36,39 @@
 	clear: both;
 	padding: 2px;
 }
-#scoreboard button.rond {
-	width:21px;
-	height:21px;
-	padding: 0px;
-	vertical-align:bottom;
-	background:transparent;
-	border-radius: 10px;
-	border: 2px solid transparent;
-}
 #scoreboard .scoreboard_list button {
 	cursor: pointer;
 }
 #scoreboard .scoreboard_list button:hover {
 	border: 2px solid black;
 }
-#scoreboard .down_score:hover { border-color: #BB9105!important; }
-#scoreboard .up_score:hover { border-color: #0C5B0B!important; }
-#scoreboard .valider_score:hover { border-color: #117E9C!important; }
-#scoreboard .effacer_score:hover { border-color: #8C0002!important; }
-#scoreboard .active_score:hover { border-color: gold!important; }
+#scoreboard .active_score {
+	border-radius: 10px !important;
+}
+#scoreboard .down_score:hover {
+	background: #BB9105;
+	border-color: #BB9105!important;
+}
+#scoreboard .up_score:hover {
+	background: #0C5B0B;
+	border-color: #0C5B0B!important;
+}
+#scoreboard .valider_score:hover {
+	background: #117E9C;
+	border-color: #117E9C!important;
+}
+#scoreboard .effacer_score:hover {
+	background: #8C0002;
+	border-color: #8C0002!important;
+}
+#scoreboard .active_score:hover {
+	background: gold;
+	border-color: gold!important;
+}
+#scoreboard .scoreboard_new_btn:hover {
+	border-color: blue;
+	background: blue;
+}
 
 #scoreboard .nom {
 	padding: 2px 4px 2px;
