mettre un bouton en croix rouge pour enlever une image (et avec confirmation) griser le bouton changer (même s'il reste fonctionnel pour le moment) ajuster des titles aux bons endroits (en guise de manuel d'utilisation) améliorer la mise à jour du title des points/du timer

--- a/cjs/gestion.css
+++ b/cjs/gestion.css
@@ -88,11 +88,8 @@ h3 {
 	color:white!important;
 }
 .btns .changer {
-	border-color: green;
-}
-.btns button.changer:hover {
-	background:#080!important;
-	color:white!important;
+	color: #BBB;
+	border-color: #BBB;
 }
 .btns .twitter {
 	border-color: #008;
