n'afficher les points d'une image que si c'est l'image de jeu en cours

--- a/cjs/module_screens.css
+++ b/cjs/module_screens.css
@@ -217,6 +217,7 @@
 	padding: 0px 2px;
 }
 .screen .screen_timer .screen_timer_text {
+	display: none;
 	border: none;
 	width: 4em;
 	text-align: right;
@@ -233,6 +234,9 @@
 }
 .screen.active .screen_timer {
 	background: yellow;
+}
+.screen.active .screen_timer .screen_timer_text {
+	display: inline;
 }
 
 /* images */
