--- a/cjs/module_twitter.css
+++ b/cjs/module_twitter.css
@@ -18,9 +18,9 @@
 	width: 34px;
 	height: 34px;
 	padding: 0px;
-	border: none;
-	border-radius: 50px;
-	background:white;
+	border: 2px solid transparent;
+	border-radius: 8px;
+	background:transparent;
 	vertical-align:middle;
 	cursor: pointer;
 }
