--- a/cjs/module_slide.css
+++ b/cjs/module_slide.css
@@ -15,6 +15,10 @@
 	height:100%;
 	z-index:0;
 }
+#slide_block .btns {
+	text-align: center;
+	width: <?=$screen_width?>px;
+}
 
 #slide_scores {
 	position:absolute;
