--- a/cjs/module_screens.css
+++ b/cjs/module_screens.css
@@ -358,13 +358,14 @@
 }
 #sources .bouton_pagination .categorie_size {
 	position: absolute;
-	right: 4px;
-	bottom: 2px;
+	right: 6px;
+	bottom: 0px;
 	text-decoration: none;
 	color: black;
 	font-size: 10px;
 	border-radius: 8px;
-	background: rgba(255,255,255,0.5);
+	padding: 0px 1px;
+	background: rgba(255,255,255,0.7);
 }
 
 #sources .pagination_star {
