--- a/cjs/gestion.css
+++ b/cjs/gestion.css
@@ -175,6 +175,9 @@ form {
 	border-radius: 0px 0px 8px 8px;
 	text-decoration: none;
 }
+#menu label {
+	border-color: #BBE5E6;
+}
 #menu input {
 	margin: 0px 4px 0px 0px;
 }
